# experiments

aries-vcx-cli/: Cargo.toml
aries-vcx-cli/config/: localhost.toml
aries-vcx-cli/src/: config.rs  init.rs  main.rs  server.rs
aries-vcx-cli/src/agent/: init.rs  mod.rs
aries-vcx-cli/src/commands/: mod.rs
aries-vcx-cli/src/commands/connection/: mod.rs  (+1 more)
aries-vcx-cli/src/configuration/: app_config.rs  mod.rs  setup.rs
aries-vcx-cli/src/server/: api.rs  handlers.rs  mod.rs
blockchain/: main.go
blockchain/blockchain/: block.go  blockchain.go  proof.go  wallet.go
clean-code-example/: Cargo.toml
clean-code-example/src/: adapters.rs  drivers.rs  entities.rs  main.rs  use_cases.rs
did_doc_builder/: Cargo.toml
did_doc_builder/src/: did.rs  did_doc.rs  did_url.rs  error.rs  lib.rs  service.rs  uri.rs  utils.rs  verification_method.rs
did_doc_builder/src/schema/: did_doc.rs  service.rs  verification_method.rs
did_doc_builder/src/schema/types/: did.rs  did_url.rs  jsonwebkey.rs  mod.rs  multibase.rs  uri.rs
did_doc_builder/tests/: serde.rs
did_parser/: Cargo.toml  rustfmt.toml
did_parser/src/: error.rs  lib.rs  parsed_did.rs  parsed_did_url.rs  parsing.rs
did_parser/src/utils/: parse.rs  validate.rs
did_parser/tests/: negative.rs  positive.rs
did_resolver/: Cargo.toml
did_resolver/src/: dereferenceable.rs  error.rs  lib.rs  registry.rs  resolvable.rs
did_resolver/src/resolver_registry/: mod.rs
did_resolver/src/shared_types/: did_document_metadata.rs
did_resolver/src/traits/: did_document_metadata.rs  mod.rs
did_resolver/src/traits/dereferenceable/: dereferencing_error.rs  dereferencing_metadata.rs  dereferencing_options.rs  dereferencing_output.rs  mod.rs
did_resolver/src/traits/resolvable/: mod.rs  resolution_error.rs  resolution_metadata.rs  resolution_options.rs  resolution_output.rs
did_resolver_indy/: Cargo.toml
did_resolver_indy/src/: lib.rs
did_resolver_registry/src/: lib.rs
did_resolver_sov/: Cargo.toml
did_resolver_sov/src/: error.rs  lib.rs  resolver.rs  service.rs
did_resolver_sov/src/dereferencing/: dereferencer.rs  utils.rs
did_resolver_sov/src/error/: mod.rs  parsing.rs  resolution.rs
did_resolver_sov/src/resolution/: resolver.rs  utils.rs
did_resolver_sov/tests/: resolution.rs
hrtb/src/: main.rs
indy_did_method/: Cargo.toml
lazy_buffer/: Cargo.toml
lazy_buffer/src/: main.rs
linked_list/src/: lib.rs
mockall-test/: Cargo.toml
mockall-test/src/: lib.rs
nom-parser/: Cargo.toml  justfile
nom-parser/src/: lib.rs
remove-not-matching/: run.sh
serde-xplore/: Cargo.toml
serde-xplore/src/: main.rs
trie/src/: lib.rs
type_erased_error/: Cargo.toml
type_erased_error/src/: main.rs
typescript-references/: package-lock.json  package.json  tsconfig.json
typescript-references/apple/: package-lock.json  package.json  tsconfig.alt.json  tsconfig.json
typescript-references/apple/src/: index.ts
typescript-references/banana/: package-lock.json  package.json  tsconfig.json
typescript-references/banana/src/: index.ts
untagged_serde/: Cargo.toml
untagged_serde/src/: lib.rs
visitor/src/: main.rs
visitor1/src/: main.rs
(+6 files in other folders)
