[package]
name = "did_doc_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
http-serde = "1.1.2"
jsonwebkey = "0.3.5"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
uriparse = "0.6.4"
