[package]
name = "did_doc_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
# jsonwebkey = "0.3.5"
multibase = "0.9.1"
serde = { version = "1.0.159", default-features = false, features = ["derive"] }
serde_json = "1.0.95"
uniresid = { version = "0.1.4", default-features = false, features = ["serde"] }
