[package]
name = "did_resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
did_parser = { path = "../did_parser" }
did_doc_builder = { path = "../did_doc_builder" }
lru = "0.10.0"
async-trait = "0.1.68"
mockall = "0.11.4"
tokio = { version = "1.27.0", features = ["macros", "rt"] }
chrono = { version = "0.4.24", default-features = false, features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
