[package]
name = "did_resolver_sov"
version = "0.1.0"
edition = "2021"

[dependencies]
did_resolver = { path = "../did_resolver" }
aries_vcx_core = { path = "/Users/ab006rh/Source/aries-vcx/aries_vcx_core" }
lru = "0.10.0"
async-trait = "0.1.68"
env_logger = "0.10.0"
log = "0.4.17"
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }

[dev-dependencies]
aries-vcx = { path = "/Users/ab006rh/Source/aries-vcx/aries_vcx", features = ["test_utils"] }
tokio = { version = "1.27.0", default-features = false, features = ["macros", "rt"] }
uuid = "1.3.1"
